--- a/Courses.html
+++ b/Courses.html
@@ -35,13 +35,13 @@
             </div>
             <div class="courses">
                 <div class="course1">
-                    <img src="Assets/Images/Codeacadamy.png" alt="CodeAcademy">
+                    <a href="https://www.codecademy.com/"><img src="Assets/Images/Codeacadamy.png" alt="CodeAcademy"></a>
                 </div>
                 <div class="course2">
-                    <img src="Assets/Images/khanacademy.jpg" alt="KhanAcademy">
+                    <a href="https://www.khanacademy.org/"><img src="Assets/Images/khanacademy.jpg" alt="KhanAcademy"></a>
                 </div>
                 <div class="course3">
-                    <img src="Assets/Images/W3Schools.jpg" alt="W3Schools">
+                    <a href="https://www.w3schools.com/"><img src="Assets/Images/W3Schools.jpg" alt="W3Schools"></a>
                 </div>
 
                 <div class="courseh1">
